refactor & reformat